--- a/css/Style.css
+++ b/css/Style.css
@@ -4,30 +4,41 @@ body {
 }
 
 .contenedor {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 100px 75px 500px 50px;
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-    }
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  }
   
-  
-  .header { grid-area: 1 / 1 / 2 / 2; 
+  .header { grid-area: 1 / 1 / 3 / 6; 
     background-color: blue;
-
+    height: 120px;
   }
-  .menu { grid-area: 2 / 1 / 3 / 2; 
+  .menu { grid-area: 3 / 1 / 4 / 6; 
     background-color: aqua;
+    text-align: center;
+  
   }
-  .contenido { grid-area: 3 / 1 / 4 / 2;
+  .contenido { grid-area: 4 / 1 / 6 / 6; 
     background-color: brown;
- 
-   }
-  .footer { grid-area: 4 / 1 / 5 / 2; 
+  
+  }
+  .footer { grid-area: 6 / 1 / 7 / 6; 
     background-color: blueviolet;
+  
   }
 
-  section{
+.titulo {
+  color: white;
+  text-align: center;
+}
+
+.menu p{
+  display: inline-block;
+  margin-right: 30px;
+
+  /* section{
     display: flex;
     width: 600px;
     height: 430px;
@@ -45,4 +56,4 @@ body {
     width: 300px;
     opacity: 1;
     filter: contrast(120%);
-  }
+  } */
