--- a/css/Style.css
+++ b/css/Style.css
@@ -1,11 +1,10 @@
 body {
-  background-color: black;
+  background-color: antiquewhite;
   margin: 0;
 }
 
 .contenedor {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
   grid-template-rows: repeat(6, 1fr);
   grid-column-gap: 0px;
   grid-row-gap: 0px;
@@ -22,7 +21,7 @@ body {
   }
   .contenido { grid-area: 4 / 1 / 6 / 6; 
     background-color: brown;
-  
+    height: 500px;
   }
   .footer { grid-area: 6 / 1 / 7 / 6; 
     background-color: blueviolet;
