--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 body{
   margin: 0px;
-
+  background-color: grey;
 }
 
 .contenedor {
@@ -87,19 +87,22 @@ a {
   margin: 100px;
 }
 .iconos  {
-  font-size: 150px;
+  font-size: 130px;
 }
 
 .divIconos {
   display: flex;
   flex-direction: column;
   text-align: center;
+  user-select: none;
   
 }
 
 .divIconos h3{
   display: flex;
   justify-content: center;
+  font-size: 30px;
+  user-select: none;
 }
 
 .carousel{
@@ -118,4 +121,14 @@ a {
 
 .subtitulo {
   color: black;
+}
+
+
+.iconos
+ {
+    transition: transform .2s; 
+}
+ 
+.iconos:hover {
+    transform: scale(1.5); 
 }
