--- a/css/estilos_galeria.css
+++ b/css/estilos_galeria.css
@@ -15,8 +15,8 @@
 .Filtro {
     grid-area: Filtro; 
     height: 64px;
-    background-color:#df723a;  
-    /* background-color: #cce7e8 */
+    /* background-color:#df723a;   */
+    background-color: #62bdd0 
     
 }
 
@@ -53,6 +53,38 @@
 }
 
 
+
+.filtro-dd {
+    display: inline-block;
+    position: relative;
+  }
+  .filtro-dd-subfiltro {
+    display: none;
+    position: absolute;
+    width: 100%;
+    overflow: auto;
+    z-index: 0;
+    box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.4);
+  }
+  .filtro-dd:hover .filtro-dd-subfiltro {
+    display: block;
+    opacity: 1;
+  }
+  .filtro-dd-subfiltro a {
+    display: block;
+    color: #000000;
+    padding: 0px;
+    text-decoration: none;
+  }
+  .filtro-dd-subfiltro a:hover {
+    color: #FFFFFF;
+    background-color: #00A4BD;
+  }
+
+
+
+
+
 .Galeria {
     grid-area: Galeria; 
     height: 100vh;
@@ -61,13 +93,15 @@
 
 .container_card {  
     display: grid;
-    
+    margin-left: 10px;
+    margin-right: 10px;
     gap: 10px 10px;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); 
 
     justify-content: stretch; 
     align-items: stretch;
     justify-items: stretch;
+    
   }
   
 
@@ -77,24 +111,50 @@
     border-color: black;
 	min-height: 200px;
 	font-weight: bold;
-	padding: 20px;
+	padding: 0px;
 	position: relative;
 	overflow: hidden;
 	background-size: cover;
 	background-position: center center;
     background-clip: content-box;
 
+    background-color: white;
     transition: all .4s;
     /*align-self: stretch; */
 }
 
 .card img {
-    object-position: center;
+    object-position: center;    
+    margin-left: 50px;
 }
 
-.card p {
+.card_info {
+    display:flex;
+    flex-direction: column;
     color: black;
-    padding: 0px;
+    padding: 10px;
     font-weight: bold;
 }
-  
+
+.card_linea {
+    display: block;
+    text-indent: 10px;
+    align-items: center;
+    justify-content: center;
+    align-self: auto;
+}
+
+.card_linea1 {
+    color: red;
+}
+
+.card_linea2 {
+    /* Linea del Precio anterior */
+    color:grey;
+    font-weight:normal;
+    text-decoration: line-through;
+}
+
+.card_linea3{
+    float: left;
+}
