--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 body{
   margin: 0px;
-  background-color: #056161;
+  /* background-color: #056161; */
+  background-color: #09baba ;  /*Propuesta*/
 }
 
 .contenedor {
