--- a/css/mediaq_mss.css
+++ b/css/mediaq_mss.css
@@ -15,7 +15,24 @@ and (min-width : 320px)
 and (max-width : 480px) { 
   /* Styles */  
 
+  .container_card {  
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   }
+
+  .logo {
+    width: 90%;
+  }
+
+  .nav-filtro a {
+    width:100px;
+  }
+  
+  .menu {
+    font-size: small;
+  }
+
+
+}
 
 /* Tabletas (portrait and landscape) ----------- 
 @media only screen  
@@ -38,7 +55,7 @@ and (max-width : 1024px) {
 
 /* Desktops and laptops ----------- */  
 @media only screen  
-and (min-width : 1224px) {  
+and (min-width : 1025px) {  
   /* Styles */  
 
  
