--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,6 @@
 body{
   margin: 0px;
-  /* background-color: #056161; */
-  background-color: #b5b5b5 ;  /*Propuesta*/
+  background-color: #b5b5b5 ;
 }
 
 .contenedor {
@@ -12,16 +11,6 @@ body{
   align-items: stretch;
   align-content: stretch;
 }
-
-/* .header {
-  display: block;
-  flex-grow: 0;
-  flex-shrink: 1;
-  flex-basis: auto;
-  align-self: auto;
-  order: 0;
-  height: 100px;
-} */
 
 .header {
   display: flex;
