--- a/css/faq.css
+++ b/css/faq.css
@@ -1,90 +1,211 @@
 body{
     margin: 0px;
     font-family: 'Roboto Slab', serif;
+
+    background-color: #b5b5b5 ;
 }
 .contenedor {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    background-color:#2a2344 ;
-  }
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: stretch;
+  align-content: stretch;
+  width: 100%;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.logo {
+  text-align: center;
+}
+  
+.menu {
+  display: flex;
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: auto;
+  align-self: auto;
+  order: 0;
+  height: 75px;
+  align-items: center;
+  justify-content: center;
+  background-color:black;
+}
+
+.menu p{
+  margin-right: 30px;
+  display: inline-block;
+  color: black;
+  text-align: center;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+
+section{
+    width: 900px;
+
+    background-color: #b5b5b5
+}
+
   .header {
     display: flex;
-    height: 100px;
+    justify-content: center;
+    align-items: center;
   }
+  
+  .logo {
+    text-align: center;
+  }
+  
   .menu {
     display: flex;
-    height:  75px;
+    flex-grow: 0;
+    flex-shrink: 1;
+    flex-basis: auto;
+    align-self: auto;
+    order: 0;
+    height: 75px;
     align-items: center;
-    justify-content: right;
-    background-color:#260729;
+    justify-content: center;
+    background-color:black;
   }
+
   .menu p{
     margin-right: 30px;
+    display: inline-block;
+    color: black;
+    text-align: center;
+  }
+
+  .navi {
+    transition: transform .2s; 
+  }
+  
+  .navi:hover {
+    transform: scale(1.2); 
   }
 
   a {
     text-decoration: none;
-    color: whitesmoke;
+  color: black;
+  font-family: 'Roboto', sans-serif;
+
   }
 
-  section{
-    width: 700px;
+section{
+    width: 800px;
+
     padding: 40px;
-    margin:auto;
-    margin-top: 20px;
+     margin:auto;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 40px;
     color:white;
-    background-color: #495168;
+
+    background-color:#b5b5b5;
     border-radius: 5px;
+    transition: all .2s ease-in-out;
+    overflow: hidden;
    
   } 
 
+   
+
+
 
 summary{
-  background-color: grey;
-  padding: 12px;
-  border-radius: 5px;
-  border-color: antiquewhite;
+  background-color: black;
+
+  padding: 18px;
+  border-radius: 2px;
+  border-bottom:2px solid #b5b5b5  ;
+
+  padding: 16px;
+  border: antiquewhite;
+  border-radius: 2px;
+  border-bottom:2px solid #b5b5b5;
+
   cursor: pointer;
   list-style: none;
+  
 }
+
+iframe{
+  width: 500px;
+  height:300px;  
+  border-radius: 8px;
+}
+
 
 summary::before{
 content: '+';
-padding-right: 1rem;
+padding-right: 2rem;
 }
 
 details[open] summary::before{
   content: '-';
 }
 
- h1{
-  color: aliceblue;
+ h4{
+  color: black;
   text-align: center;
 }
 
+iframe{
+  width: 500px;
+  height: 300px;
+  border-radius: 10px;
+}
 
+/* RESPONSIVE DESIGNE FAQ, MEDIA QUERYS
 
+/*Desktop */
+@media screen and (min-width:1024px) {
+  section{
+    width: 100%;
+    height: 100%;
+  }
+ h4{
+  width: 100%;
+  text-align: center;
+}
+}
 
+/*Tablet */
+@media screen and (min-width:768px) and (max-width:1023px) {
+section{
+  width: 90%;
+  height: 90%;
+}
+h4{
+width: 90%;
+text-align: center;
+}
+}
 
-
-
-
-
-
-
+/*Smarphone*/
+@media screen and (max-width:767px) {
+  section{
+    width: 100%;
+    height:100%;
+  }
+  h4{
+  width: 100%;
+  text-align: center;
+  }
+  }
+  
     
-
-
-
-
-
-
-
-
   .footer {
     display: block;
     flex-grow: 0;
@@ -93,7 +214,7 @@ details[open] summary::before{
     align-self: auto;
     order: 0;
     height: 50px;
-    background-color: #260729;
+    background-color: black;
   }
 
   .footer p{
