--- a/css/estilos_galeria.css
+++ b/css/estilos_galeria.css
@@ -204,7 +204,7 @@
     width: 80%;
     max-width: 700px;
     text-align: center;
-    color: #ccc;
+    color: #e76220;
     padding: 10px 0;
     height: 150px;
   }
@@ -225,7 +225,8 @@
     position: absolute;
     top: 15px;
     right: 35px;
-    color: #f1f1f1;
+    /* color: #f1f1f1; */
+    color: #0e0d0d;
     font-size: 40px;
     font-weight: bold;
     transition: 0.3s;
