--- a/css/faq.css
+++ b/css/faq.css
@@ -1,3 +1,8 @@
+
+
+
+
+/*
 body{
     margin: 0px;
     font-family: 'Roboto Slab', serif;
@@ -101,28 +106,34 @@ section{
   font-family: 'Roboto', sans-serif;
 
   }
+  */
 
+
+
+/*Título principal de la sección FAQ*/
+  h4{
+    color: black;
+    text-align: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  text-decoration: underline;
+  }
+
+ 
+
+/*Contenedor principal del acordeón de FAQ*/
 section{
     width: 800px;
-
     padding: 40px;
-     margin:auto;
+    margin:auto;
     display: flex;
     flex-direction: column;
     gap: 40px;
     color:white;
-
     background-color:#b5b5b5;
     border-radius: 5px;
-    transition: all .2s ease-in-out;
-    overflow: hidden;
-   
-  } 
-
-   
-
-
-
+   } 
+  
+/*Secciones del acordeón. FAQ*/
 summary{
   background-color: black;
 
@@ -140,37 +151,29 @@ summary{
   
 }
 
+/*Direcciones del local de ropa, contenido en la primer casilla del acordeón. FAQ */
 iframe{
   width: 500px;
   height:300px;  
-  border-radius: 8px;
+  border-radius: 10px;
 }
 
-
+/*Ícono de acordeón. FAQ */
 summary::before{
 content: '+';
 padding-right: 2rem;
 }
 
+/*Cuando se abra la sección de FAQ, el icono cambia a "-" */
 details[open] summary::before{
   content: '-';
 }
 
- h4{
-  color: black;
-  text-align: center;
-}
 
-iframe{
-  width: 500px;
-  height: 300px;
-  border-radius: 10px;
-}
 
-/* RESPONSIVE DESIGNE FAQ, MEDIA QUERYS
 
-/*Desktop */
-@media screen and (min-width:1024px) {
+/* Smartphones (portrait and landscape) -------------------------------------------------- */  
+@media only screen  and (min-width : 320px)  and (max-width : 480px) { 
   section{
     width: 100%;
     height: 100%;
@@ -181,47 +184,41 @@ iframe{
 }
 }
 
-/*Tablet */
-@media screen and (min-width:768px) and (max-width:1023px) {
-section{
-  width: 90%;
-  height: 90%;
-}
-h4{
-width: 90%;
-text-align: center;
-}
-}
-
-/*Smarphone*/
-@media screen and (max-width:767px) {
+/* Tabletas y iPads (portrait and landscape) ------------------------------------------------ */  
+/* cambie (min-width : 768px) x 481 para juntar */
+@media only screen  
+and (min-width : 481px)  
+and (max-width : 1024px) {  
   section{
     width: 100%;
-    height:100%;
+    height: 100%;
   }
-  h4{
+ h4{
   width: 100%;
   text-align: center;
-  }
-  }
-  
-    
-  .footer {
-    display: block;
-    flex-grow: 0;
-    flex-shrink: 1;
-    flex-basis: auto;
-    align-self: auto;
-    order: 0;
-    height: 50px;
-    background-color: black;
-  }
+}
+}
 
-  .footer p{
-    text-align: center;
-    color: white  ;
-
+/* Desktops and laptops ---------------------------------------------------------------- */  
+@media only screen  
+and (min-width : 1025px) {  
+  section{
+    width: 100%;
+    height: 100%;
   }
+ h4{
+  width: 100%;
+  text-align: center;
+  ;
+}
+}
+
+
+
+
+
+
+
 
 
 
