arreglo de css contactos

--- a/css/mediaq.css
+++ b/css/mediaq.css
@@ -5,8 +5,7 @@
 320px — 480px: Smartphones - Dispositivos móviles
 481px — 768px: Tabletas
 769px — 1024px: Ipad grandes
-1025px — 1200px: Desktops and laptops - Computadoras de escritorio, pantallas grandes
-1201px y más —  Large screens - Pantallas extra grandes, TV
+1025px — y mas: Desktops and laptops - Computadoras de escritorio, pantallas grandes
 */
 
 /* Smartphones (portrait and landscape) -------------------------------------------------- */  
