--- a/css/estilos_contacto.css
+++ b/css/estilos_contacto.css
@@ -1,4 +1,4 @@
-h/* tml {
+/*html {
     font-family: 'Montserrat', Arial, sans-serif;
     background: #b5b5b5;
 }
@@ -12,35 +12,6 @@ h/* tml {
 .logo {
     text-align: center;
 }
-
-.menu {
-    display: flex;
-    flex-grow: 0;
-    flex-shrink: 1;
-    flex-basis: auto;
-    align-self: auto;
-    order: 0;
-    height: 75px;
-    align-items: center;
-    justify-content: center;
-    background-color:black;
-}
-
-.menu p{
-    margin-right: 30px;
-    display: inline-block;
-    color: black;
-    text-align: center;
-} 
-
-.navi {
-    transition: transform .2s; 
-}
-
-.navi:hover {
-    transform: scale(1.2); 
-}
-
 
 a {
     text-decoration: none;
@@ -56,10 +27,6 @@ input, textarea {
     margin: 0;
 }
 
-textarea {
-    overflow: auto;
-}
-
 #container {
     background-color: white;
     border: solid 3px #474544;
@@ -68,6 +35,7 @@ textarea {
     margin: 60px auto;
     position: relative;
     box-shadow: 0 3px 10px #474544;
+    font-family: 'Montserrat', Arial, sans-serif;
 }
 
 form {
@@ -75,14 +43,14 @@ form {
     margin: 50px 0;
 }
 
-/* h1 {
+.h1Contactenos {
     color: #1cdaff;
     font-size: 32px;
     font-weight: 700;
     letter-spacing: 7px;
     text-align: center;
     text-transform: uppercase;
-} */
+}
 
 .social {
     display: flex;
@@ -101,18 +69,13 @@ form {
     color: #474544;
 }
 
-.apellido {
-	float: right;
-	width: 45%;
-}
-
 input[type='text'], [type='email'], textarea {
 	background: none;
     border: none;
 	border-bottom: solid 2px #474544;
 	color: #474544;
 	font-size: 1em;
-    font-weight: 400;
+    font-weight: 600 ;
     letter-spacing: 1px;
 	margin: 0em 0 1.875em 0;
 	padding: 0 0 0.875em 0;
@@ -136,15 +99,21 @@ input[type='text']:focus, [type='email']:focus, textarea:focus {
 	width: 45%;
 }
 
+.apellido {
+	float: right;
+	width: 45%;
+}
+
 .email {
     width: 100%;
 }
 
 textarea {
 	line-height: 150%;
-	height: 50px;
+	height: 150px;
 	resize: none;
     width: 100%;
+    overflow: auto;
 }
 
 input::placeholder,textarea::placeholder {
@@ -174,7 +143,7 @@ input::placeholder,textarea::placeholder {
 
 .footer {
     display: block;
-    flex-grow: 0;
+    flex-grow: 1;
     flex-shrink: 1;
     flex-basis: auto;
     align-self: self-end;
