--- a/css/index.css
+++ b/css/index.css
@@ -39,7 +39,6 @@ body{
   justify-content: center;
   background-color:black;
   width: 100%;
-
 }
 
 .menu p{
@@ -60,9 +59,8 @@ body{
 
 a {
   text-decoration: none;
-  color: black;
+  color: white;
   font-family: 'Roboto', sans-serif;
-
 }
 
 .titulo{
